# rust_webserver

./: .gitignore  404.html  Cargo.toml  filter_map.txt  index.html  map.txt  optimize.txt
benches/: bench_tokenizer.rs
notes/: http.txt  notes.sh
src/: indexer.rs  main.rs
src/common/: fsutil.rs  httpd.rs  mod.rs  pool.rs  printing.rs  server.rs
static/: index.html  style.css
static/data/: hamlet.txt
